--- a/arch/platform/srf06-cc26xx/Makefile.srf06-cc26xx
+++ b/arch/platform/srf06-cc26xx/Makefile.srf06-cc26xx
@@ -6,7 +6,7 @@ endif
 
 ### Board and BSP selection
 BOARD ?= srf06/cc26xx
-BOARDS = srf06/cc26xx srf06/cc13xx launchpad/cc2650 launchpad/cc1310 launchpad/cc1350 sensortag/cc2650 sensortag/cc1350
+BOARDS = srf06/cc26xx srf06/cc13xx launchpad/cc2650 launchpad/cc1310 launchpad/cc1350 sensortag/cc2650 sensortag/cc1350 launchpad-bp/cc1350bp
 
 CONTIKI_TARGET_DIRS += .
 
@@ -14,7 +14,7 @@ CONTIKI_TARGET_DIRS += .
 PLATFORM_ROOT_DIR = $(CONTIKI)/arch/platform/$(TARGET)
 -include $(PLATFORM_ROOT_DIR)/$(BOARD)/Makefile.$(notdir $(BOARD))
 
-CONTIKI_TARGET_SOURCEFILES += platform.c leds-arch.c
+CONTIKI_TARGET_SOURCEFILES += platform.c sensors.c leds-arch.c
 CONTIKI_TARGET_SOURCEFILES += $(BOARD_SOURCEFILES)
 
 CONTIKI_SOURCEFILES += $(CONTIKI_TARGET_SOURCEFILES)
