--- a/arch/platform/srf06-cc26xx/launchpad-bp/Makefile.launchpad-bp
+++ b/arch/platform/srf06-cc26xx/launchpad-bp/Makefile.launchpad-bp
@@ -3,7 +3,7 @@ CFLAGS += -DBOARD_LAUNCHPAD=1
 CONTIKI_TARGET_DIRS += launchpad-bp common
 
 BOARD_SOURCEFILES += sensortag-sensors.c board-buttons.c sensor-common.c
-BOARD_SOURCEFILES += tmp-007-sensor.c opt-3001-sensor.c bme280.c
+BOARD_SOURCEFILES += tmp-007-sensor.c opt-3001-sensor.c bme280.c bmi160.c
 BOARD_SOURCEFILES += board.c board-i2c.c xmem.c
 
 MODULES += arch/dev/ext-flash
