--- a/examples/platform-specific/cc1350-bp/sensors-networking-demo/Makefile
+++ b/examples/platform-specific/cc1350-bp/sensors-networking-demo/Makefile
@@ -1,8 +1,8 @@
- CONTIKI_PROJECT = bme280-demo
-
+CONTIKI_PROJECT = sensors-networking-client sensors-networking-server
 PLATFORMS_ONLY = srf06-cc26xx
 
 all: $(CONTIKI_PROJECT)
 
 CONTIKI = ../../../..
 include $(CONTIKI)/Makefile.include
+
